@@ -1,8 +1,8 @@
 # md definition, HTTPS-only
 
-<ManagedDomain testdomain.org>
+<MDomainSet testdomain.org>
     MDMember www.testdomain.org mail.testdomain.org
     MDRequireHttps permanent
-</ManagedDomain>
+</MDomainSet>
 
 
