@@ -1,6 +1,6 @@
 # global server name as managed domain name
 
-ManagedDomain @SERVER_NAME@ www.example2.org
+MDomain @SERVER_NAME@ www.example2.org
 
 <VirtualHost *:12346>
     ServerName www.example2.org
